[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "converte_wallet"
version = "0.1.0"
description = "Лёгкая библиотека конвертации валют для Python. 150+ валют включая крипту. Без API-ключей."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["currency", "converter", "exchange", "rates", "bitcoin", "crypto", "forex"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.28",
]

[project.urls]
Homepage = "https://github.com/Shivarin/converte_wallet"
Repository = "https://github.com/Shivarin/converte_wallet"
"Bug Tracker" = "https://github.com/Shivarin/converte_wallet/issues"

[project.optional-dependencies]
redis  = ["redis>=4.0"]
server = ["fastapi>=0.100", "uvicorn>=0.23"]
dev    = ["pytest>=7.0", "pytest-cov>=4.0"]
all    = ["converte_wallet[redis,server]"]

[project.scripts]
converte = "converte_wallet.cli:main"

[tool.setuptools]
packages = ["converte_wallet", "converte_wallet.providers"]

[tool.setuptools.package-dir]
"converte_wallet"           = "app"
"converte_wallet.providers" = "app/providers"
